syntax = "proto3";
package mandechain.ssi;

option go_package = "mande-chain/x/ssi/types";

message Did {
  repeated string context = 1;
  string id = 2;
  repeated string controller = 3; // DID Controller Spec: https://www.w3.org/TR/did-core/#did-controller
  repeated string alsoKnownAs = 4;
  repeated VerificationMethod verificationMethod = 5;
  repeated string authentication = 6;
  repeated string assertionMethod = 7;
  repeated string keyAgreement = 8;
  repeated string capabilityInvocation = 9;
  repeated string capabilityDelegation = 10;
  repeated Service service = 11;
}

message Metadata {
  string created = 1;
  string updated = 2;
  bool deactivated = 3;
  string versionId = 4;
}

message VerificationMethod {
  string id = 1;
  string type = 2;
  string controller = 3;
  string publicKeyMultibase = 4; // If value is provided, `blockchainAccountId` must be empty
  string blockchainAccountId = 5; // If value is provided, `publicKeyMultibase` must be empty
}

message Service {
  string id = 1;
  string type = 2;
  string serviceEndpoint = 3;
}

message SignInfo {
  string verification_method_id = 1;
  string signature = 2;
}

message DidDocumentState {
  Did didDocument = 1;
  Metadata didDocumentMetadata = 2;
}